<?xml version="1.0" encoding="utf-8"?>
	<!--
		Copyright (C) 2009 Google Inc. Licensed under the Apache License,
		Version 2.0 (the "License"); you may not use this file except in
		compliance with the License. You may obtain a copy of the License at

		http://www.apache.org/licenses/LICENSE-2.0 Unless required by
		applicable law or agreed to in writing, software distributed under the
		License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR
		CONDITIONS OF ANY KIND, either express or implied. See the License for
		the specific language governing permissions and limitations under the
		License.
	-->
<resources>

	<string name="app_name">ODK Collect</string>
	<string name="main_menu">Main Menu</string>
	<string name="main_menu_message">ODK Collect v1.1</string>
	<string name="main_menu_details">Powered by ODK Collect</string>

	<string name="enter_data">Enter New Data</string>
	<string name="enter_data_button">Enter New Data (%s)</string>

	<string name="enter_data_message">Slide your finger from right to left to move
		forward. Reverse the slide to move back. Press Menu for more choices.
	</string>
	<string name="enter_data_description">%s has been selected for entry.</string>
	<string name="review_data_description">%s has been selected for review.</string>

	<string name="review_data">Review Saved Data</string>
	<string name="review_data_button">Review Saved Data (%s)</string>

	<string name="send_selected_data">Send Selected File(s)</string>
	<string name="send_all_data">Send All Data (%s)</string>

	<string name="send_data">Send Data</string>
	<string name="send_data_button">Send Completed Data (%s)</string>

	<string name="manage_files">Manage Files</string>

	<string name="getting_formlist">Getting Form List...</string>
	<string name="loading_form">Loading Form...</string>
	<string name="please_wait">Please wait a few moments.</string>

	<string name="save_for_later">Save as Incomplete</string>
	<string name="finalize_for_send">Save as Complete</string>

	<string name="save_data_message">Please choose one to save results.</string>
	<string name="save_data_description">%s has ended.</string>

	<string name="enter_url">Enter URL</string>

	<string name="add_repeat">Add a \"%s\"?</string>
	<string name="add_another_repeat">Add another \"%s\"?</string>

	<string name="get_location">Capture Location</string>
	<string name="getting_location">Loading GPS...</string>
	<string name="get_barcode">Capture Barcode</string>

	<string name="form_load_error">Sorry, error loading %s</string>
	<string name="barcode_scanner_error">Sorry, Barcode Scanner is not installed!</string>
	<string name="gps_disabled_error">Sorry, GPS is disabled!</string>
	<string name="required_answer_error">Sorry, this answer is required!</string>
	<string name="invalid_answer_error">Sorry, this answer is invalid!</string>
	<string name="no_forms_error">Sorry, there are no forms! Press Menu to add forms.</string>

	<string name="questionview_error">Sorry, you are not in a form yet!</string>
	<string name="noselect_error">Sorry, you have not selected any items!</string>
	<string name="languages_error">Sorry, this form has no other languages!</string>
	<string name="sdcard_error">Sorry, you have no SD card!</string>
	<string name="url_error">Sorry, URL is invalid!</string>
	<string name="load_error">Sorry, unable to load form %s</string>
	<string name="directory_error">Sorry, unable to create directory %s</string>

	<string name="file_deleted_ok">%s item(s) successfully deleted!</string>
	<string name="form_added_ok">%s successfully added!</string>
	<string name="instance_deleted_ok">%s successfully deleted!</string>
	<string name="data_saved_ok">Data successfully saved!</string>
	<string name="data_saved_error">Sorry, data save failed!</string>
	<string name="instance_deleted_error">Sorry, unable to delete %s</string>

	<string name="uploading_data">Sending Data...</string>
	<string name="downloading_data">Fetching Data...</string>
	<string name="upload_all_successful">%s item(s) sent successfully.</string>
	<string name="upload_some_failed">Sorry, %s item(s) failed to send!</string>
	<string name="download_all_successful">%s item(s) fetched successfully.</string>
	<string name="download_some_failed">Sorry, %s item(s) not fetched!</string>
	<string name="load_remote_form_error">Sorry, unable to load remote form list!</string>

	<string name="readonly_question">This question is read only.</string>
	<string name="file_deleted_error">Sorry, %s item(s) failed to delete!</string>
	<string name="clearanswer_confirm">Are you sure you want to clear this answer?</string>

	<string name="delete_confirm">Are you sure you want to delete %s item(s)?
	</string>
	<string name="entry_exit_confirm">Going back will delete any unsaved data. Are you sure?</string>
	<string name="save_exit_confirm">Are you sure you want to save and exit? Your data will be saved.</string>
	<string name="complete_exit_confirm">Are you sure you want to finalize and exit? Your data will be saved.</string>

	<string name="delete_repeat_confirm">Are you sure you want to delete the repeated
		element \"%s\" and all of its sub-elements?</string>

	<string name="settings">Settings</string>

	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="form">Form</string>
	<string name="data">Data</string>

	<string name="ok">OK</string>
	<string name="cancel">Cancel</string>

	<string name="play_image">View Image</string>
	<string name="play_audio">Play Audio</string>
	<string name="play_video">Play Video</string>

	<string name="capture_image">Capture Image</string>
	<string name="capture_audio">Capture Audio</string>
	<string name="capture_video">Capture Video</string>

	<string name="replace_image">Replace Image</string>
	<string name="replace_audio">Replace Audio</string>
	<string name="replace_video">Replace Video</string>

	<string name="no_capture">Nothing captured yet.</string>
	<string name="one_capture">Multimedia captured.</string>

	<string name="add_file">Add Selected File(s)</string>
	<string name="delete_file">Delete Selected File(s)</string>
	<string name="mark_incomplete">Mark as Incomplete</string>
	<string name="mark_incomplete_confirm">Are you sure you want to mark this file(s) as incomplete?</string>

	<string name="delete_repeat">Delete Repeat</string>
	<string name="clear_answer">Clear Answer</string>
	<string name="quit_entry">Save and Exit</string>
	<string name="change_language">Change Language</string>

	<string name="saved_data">Incomplete (%s)</string>
	<string name="saving_form">Saving Form</string>
	<string name="completed_data">Completed (%s)</string>
	<string name="submitted_data">Submitted</string>
	<string name="local_files">Local</string>
	<string name="local_files_tab">Local (%s)</string>
	<string name="remote_files">Remote</string>
	<string name="remote_files_tab">Remote (%s)</string>
	<string name="no_items_display">Nothing available to display.</string>
	<string name="no_items_error">Nothing available to %s!</string>
	<string name="review">review</string>
	<string name="enter">enter</string>
	<string name="send">send</string>

	<string name="go_back">Previous Level</string>
	<string name="jump_to">Jump to Form</string>
	<string name="jump_to_start">Beginning of Form</string>
	<string name="jump_to_end">End of Form</string>
	<string name="expanded_group">Expanded Group</string>
	<string name="collapsed_group">Collapsed Group</string>

	<string name="view_hierarchy">Jump to Question</string>

	<string name="long_hint_message">Press Menu button for the hint.</string>
	<string name="get_hint">Get Hint</string>

	<string name="ack">Acknowledge</string>
	<string name="acked">Acknowledged</string>

	<string name="edit_saved_completed_data">Edit Saved or Finalized Data</string>
	
	<string name="welcome">Welcome to Ampath HCT</string>
	<string name="login_form">Admin Login:</string>
	<string name="hct_individuals">Household Persons</string>
	<string name="hct_add_individual">Add Individual</string>
	<string name="upload_data">Send Data to Server</string>
	
	<string name="global_preferences">Global Preferences</string>
	<string name="user_preferences">User Preferences</string>
	
	<string name="server">Server</string>
	<string name="change_server">Change Server</string>
	<string name="default_server">http://192.168.1.1:8080/openmrs/moduleServlet/amrsmobileforms</string>
	<string name="change_server_summary">Your server (required)</string>
	
	<string name="username">Username</string>
	<string name="change_username">Change Username</string>
	<string name="change_user_summary">Your username</string>
	
	<string name="password">Password</string>
	<string name="change_password">Change Password</string>
	<string name="change_password_summary">********</string>
	<string name="successful_password_change">Successfully changed Password</string>
	<string name="error_changing_password">Error changing Password.</string>
	<string name="invalid_password">Invalid Current Password</string>
	
	<string name="admin_password">Admin Password</string>
	<string name="change_admin_password">Change Admin Password</string>
	<string name="current_admin_password">Current Admin Password</string>
	<string name="default_admin_password">bnf0r3st</string>
	
	<string name="password_application">Application Password</string>
	<string name="application_password_on">Disable Application Password</string>
	<string name="application_password_off">Enable Application Password</string>
	<string name="application_password_admin_error">"Operation Unsuccessful, Set the Admin Password First!"</string>
	<string name="application_password_user_error">"Operation Unsuccessful, Set the User Password First!"</string>

	<string name="login">Login Required</string>
	<string name="login_error">Login Failure. (check password and username)</string>
	<string name="admin_login">Login as Admin</string>
	<string name="access_denied">"Sorry! Access Restricted"</string>
	

</resources>